[package]
name = "bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
lta = "0.6.0"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
lto = true
panic = "abort"
