[package]
name = "segments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
lta = "0.6.0"
time = "0.3.21"
tm1637-gpio-driver = "2.0.6"
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1
